environments/dev/apps/discussion-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discussion
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: discussion
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
