environments/dev/apps/discussion-kustomization/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discussion-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - host: discussion.development.wapps.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discussion
                port:
                  number: 1338
